# hello_hip

./: .gitignore  CMakeLists.txt  README.md
simple-cpp/: CMakeLists.txt  main.cpp
simple-cpp-openmp/: CMakeLists.txt  main.cpp
simple-hip/: CMakeLists.txt  main.hip
